# blackjack

./: .gitignore  BUILD_GUIDE.md  CHANGELOG.md  CHANGELOG_UI.md  CLAUDE.md  CLEANUP_SUMMARY.md  ELECTRON_SETUP.md  INSTALL.md  LICENSE  MANIFEST.in  MODULAR_ARCHITECTURE.md  PACKAGING.md  PHASE1_IMPROVEMENTS.md  PHASE2_COMPLETE.md  PKG-INFO  POETRY_GUIDE.md  PROJECT_STRUCTURE.txt  PROJECT_TREE.txt  README.md  README_FULL.md  README_PRO.md  REFACTORING_SUMMARY.md  SETUP_COMPLETE.md  auth_testing.md  backend_test.py  build-deb.sh  build-wheel.sh  design_guidelines.md  game.py  main.py  main_pro.py  plan.md  pyproject.toml  requirements.txt  setup.py  test_bug3_betting_advice.py  test_bug_fixes.py  test_result.md  test_split_double_fix.py  test_standalone_fix.py
.emergent/: emergent.yml
backend/: .env  game_logic.py  models.py  requirements.txt  server.py
backend/tests/: test_api.py
blackjack_card_counter/: __init__.py  __main__.py  card.py  constants.py  game.py  statistics.py  strategy.py  ui.py
blackjack_trainer/: README.md  app.py  requirements.txt
blackjack_trainer/blackjack/: __init__.py  config.py  counting.py  game_engine.py  hand.py  models.py  outcomes.py  rules.py  shoe.py  stats.py
blackjack_trainer/tests/: test_counting.py  test_engine_advanced.py  test_engine_smoke.py  test_hand.py  test_rules.py
blackjack_trainer/ui/: __init__.py  blackjack_screen.py  main_window.py  settings_dialog.py  theme.py  training_screen.py
debian/: blackjack-pro.desktop  blackjack.desktop  changelog  control  copyright  install  rules
docs/: ARCHITECTURE.md  CONTRIBUTING.md  POETRY_GUIDE.md
docs/plans/: 2025-11-06-count-verification-design.md  2025-11-06-count-verification-implementation.md  2025-11-18-configurable-deck-count-design.md
examples/: README.md  standalone_game.py
frontend/: .env  electron.js  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  App.jsx  index.css
frontend/src/__tests__/: coachingEngine.test.js  syncService.test.js
frontend/src/components/: AuthDialog.jsx  Card.css  Card.jsx  CoachingPanel.jsx  Controls.jsx  CountingTrainer.jsx  GameTable.jsx  HUD.jsx  LandingPage.jsx  LearnPage.jsx  LessonOverlay.jsx  Login.jsx  NavBar.jsx  PlayingCard.jsx  ReviewPage.jsx  SettingsDialog.jsx  StatsPanel.jsx  Table.jsx
frontend/src/lib/: api.js  authContext.js  basicStrategy.js  coachingEngine.js  coachingProgress.js  engine.js  gameLogic.js  lessonStore.js  lessons.js  storage.js  store.js  syncService.js  useGameState.js
memory/: PRD.md
src/: __init__.py  advanced_counter.py  card.py  counter.py  game.py  gui.py  gui_enhanced.py  persistence.py  strategy.py
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json
test_reports/pytest/: pytest_results.xml
tests/: __init__.py  test_advanced_features.py  test_card.py  test_core.py  test_counter.py  test_game.py  test_game_logic.py  test_strategy.py
